name: linklater
version: 4.0.0.2
license: BSD3
author: Hao Lian <hi@haolian.org>
maintainer: Hao Lian <hi@haolian.org>
copyright: (c) 2018 Charles O'Farrell
cabal-version: >= 1.24
build-type: Simple
description:
  A Haskell library for the Slack API

library
  default-language: Haskell2010

  build-depends:
      base >= 4.9.1.0 && < 5
    , base-prelude
    , bytestring
    , containers
    , exceptions
    , http-types
    , lens
    , lens-aeson
    , mtl
    , safe-exceptions
    , text
    , uri-bytestring
    , wai
    , wreq
    , aeson

  ghc-options:
    -Wall

  default-extensions:
      FlexibleContexts
    , LambdaCase
    , OverloadedLists
    , OverloadedStrings
    , ScopedTypeVariables

  hs-source-dirs:
    lib

  exposed-modules:
    Network.Linklater
    Network.Linklater.Batteries
    Network.Linklater.Types
